# fnq

./: .gitignore  Cargo.toml  LICENSE  README.md  test_append  tests.sh
.github/workflows/: rust.yml
src/: cmd_ops.rs  main.rs  parser.rs  queue.rs
src/cmd_ops/: files.rs  mod.rs  os_strings.rs  queue.rs  queue_files.rs  tap.rs  wait.rs
src/ops/: error.rs  files.rs  last.rs  mod.rs  os_strings.rs  queue.rs  tap.rs  wait.rs  watch.rs
